fixed :
- org.apache.fop.configuration.Configuration.buildBaseURL (back to original code)
- org.apache.fop.fonts.apps.TTFReader.main
- org.apache.fop.fonts.apps.TTFReader.writeFontXML, now writes xml font files (userconfig.xml)
- org.apache.fop.render.pdf.PDFRenderer.getUnicodeString
- org.apache.fop.tools.URLBuilder.buildURL (back to original code)
- org.apache.xerces.impl.msg.XMLMessageFormatter.formatMessage
- org.apache.xerces.impl.xs.XSMessageFormatterformatMessage